Fix spacing of experience section

--- a/src/app/components/sections/sections.module.css
+++ b/src/app/components/sections/sections.module.css
@@ -70,7 +70,7 @@
     padding: 0;
     margin-top: 0.5rem;
     padding-right: 3.5rem;
-    padding-bottom: 2.5rem;
+    padding-bottom: 3rem;
 }
 
 .experience li,
